fix(shelfInfo): updated shelf info, missing overFlowScroll.

--- a/client/components/shelf/shelf.component.scss
+++ b/client/components/shelf/shelf.component.scss
@@ -127,7 +127,16 @@
 	}
 	.shelf-overlay-bottom-enter-to,
 	.shelf-overlay-bottom-leave {
-		height: 35rem;
+		height: 80vh;
+	}
+}
+
+@media(max-height:600px) {
+	.shelf {
+		.shelf-overlay-bottom-enter-to,
+		.shelf-overlay-bottom-leave {
+			height: 99vh;
+		}
 	}
 }
 
